--- a/CSCI526/Assignment 1/Mission2_1.0/index.html
+++ b/CSCI526/Assignment 1/Mission2_1.0/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Mission2_1.0.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Mission2_1.0.data.br",
-        frameworkUrl: buildUrl + "/Mission2_1.0.framework.js.br",
-        codeUrl: buildUrl + "/Mission2_1.0.wasm.br",
+        dataUrl: buildUrl + "/Mission2_1.0.data",
+        frameworkUrl: buildUrl + "/Mission2_1.0.framework.js",
+        codeUrl: buildUrl + "/Mission2_1.0.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "essentials_pathway",
