--- a/CSCI526/Assignment 1/Plane_Prototype_1.0/index.html
+++ b/CSCI526/Assignment 1/Plane_Prototype_1.0/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Challenge_1.loader.js";
+      var loaderUrl = buildUrl + "/Plane_Prototype_1.0.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Challenge_1.data.gz",
-        frameworkUrl: buildUrl + "/Challenge_1.framework.js.gz",
-        codeUrl: buildUrl + "/Challenge_1.wasm.gz",
+        dataUrl: buildUrl + "/Plane_Prototype_1.0.data",
+        frameworkUrl: buildUrl + "/Plane_Prototype_1.0.framework.js",
+        codeUrl: buildUrl + "/Plane_Prototype_1.0.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Junior_Programmer",
